[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
ethereum_ssz.workspace = true
http.workspace = true
relay-api-types = { path = "../relay-api-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
types.workspace = true
